<resources>
    <string name="Nome_aplicativo" translatable="false">IFAMenu</string>

    <!-- Strings relativas ao login -->
    <string name="Mensagem_inicial">Seja bem vindo e bom apetite</string>
    <string name="Usuario">Usuário</string>
    <string name="Senha">Senha</string>
    <string name="Acessar">Acessar</string>
    <string name="Campo_Obrigatorio">O campo é obrigatório</string>
    <string name="Senha_invalida">A senha não pode ser muito curta(Mínimo de 4 caracteres)</string>
    <string name="Desenvolvedor">Desenvolvido por Maison Galvão</string>


    <!-- Strings relativas aos módulos -->
    <string name="AtividadeModulos" translatable="false">Módulos</string>
    <string name="User" translatable="false">user</string>
    <string name="Modulos_do_sistema">Módulos do Sistema</string>
    <string name="Visao_administrador">Visão Administrador</string>

    <string name="Cadastro_de_usuarios">Cadastro de Usuários</string>
    <string name="Pagamento">Pagamento</string>
    <string name="Cadastrar_pratos">Cadastrar Pratos</string>
    <string name="Sugestoes">Sugestões</string>
    <string name="Anunciar">Anunciar</string>
    <string name="Pedidos">Pedidos</string>

    <!-- Strings relativas aos Usuários Cadastrados -->
    <string name="Usuarios_Cadastrados">Usuários Cadastrados</string>
    <string name="Nome">Nome</string>
    <string name="Tipo">Tipo</string>
    <string name="Botão_alterar">Alterar</string>
    <string name="botão_cadastrar">Cadastrar</string>
    <string name="Texto_Explicativo_nome_completo">Nome Completo</string>
    <string name="Texto_Explicativo_senha">Senha</string>
    <string name="Texto_Explicativo_Usuario">Usuário</string>
    <string name="Content_Descriptor_Foto_Usuario">Foto do Usuário</string>
    <string name="search_hint">Pesquisar</string>

</resources>
